--- a/qiskit/milestone1.6.ipynb
+++ b/qiskit/milestone1.6.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -58,14 +58,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<qiskit_ibm_runtime.models.backend_status.BackendStatus object at 0x7f8498348cd0>\n"
+      "<qiskit_ibm_runtime.models.backend_status.BackendStatus object at 0x7fd061adfe00>\n"
      ]
     }
    ],
@@ -76,16 +76,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<qiskit.circuit.instructionset.InstructionSet at 0x7f8495d30d30>"
+       "<qiskit.circuit.instructionset.InstructionSet at 0x7fd060181d80>"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,14 +155,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'01': 18, '00': 492, '11': 510, '10': 4}\n"
+      "{'00': 490, '11': 515, '10': 9, '01': 10}\n"
      ]
     }
    ],
@@ -173,14 +173,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{3: 0.4912109375, 0: 0.5087890625}\n"
+      "{3: 0.4833984375, 0: 0.5166015625}\n"
      ]
     }
    ],
@@ -190,7 +190,7 @@
     "from qiskit import QuantumCircuit\n",
     "from qiskit.visualization import plot_histogram\n",
     " \n",
-    "sampler = Sampler(backend_options={\"seed_simulator\": 1234})\n",
+    "sampler1= Sampler(backend_options={\"seed_simulator\": 1234})\n",
     "\n",
     "# execute the quantum circuit\n",
     "quasi_dists = sampler1.run(qc, shots=1024).result().quasi_dists[0]\n",
