transiple to basis gate

--- a/pennylane/test_commutator_hamiltonian.ipynb
+++ b/pennylane/test_commutator_hamiltonian.ipynb
@@ -52,8 +52,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "cebe93e0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2+0j) * Y(0) + (2+0j) * Y(1) + (2+0j) * Y(2) + (2+0j) * Y(3)\n",
+      "0 * I()\n"
+     ]
+    }
+   ],
+   "source": [
+    "def build_commutator_hamiltonian(H_d, H_c):\n",
+    "    comm_terms = []\n",
+    "    coeffs_d, ops_d = H_d.terms()\n",
+    "    coeffs_c, ops_c = H_c.terms()\n",
+    "    for c1, op1 in zip(coeffs_d, ops_d):\n",
+    "        for c2, op2 in zip(coeffs_c, ops_c):\n",
+    "            try:\n",
+    "                comm = commutator(op1, op2)\n",
+    "                if isinstance(comm, qml.ops.op_math.Sum) and len(comm.operands) == 0:\n",
+    "                    continue\n",
+    "                comm_terms.append(1j * c1 * c2 * comm)\n",
+    "            except Exception as e:\n",
+    "                print(f\"跳过 [{op1}, {op2}]：{e}\")\n",
+    "                continue\n",
+    "    return sum(comm_terms).simplify()\n",
+    "\n",
+    "comm_h = build_commutator_hamiltonian(driver_h, cost_h)\n",
+    "comm_hd= build_commutator_hamiltonian(driver_h,driver_h)\n",
+    "print(comm_h)\n",
+    "print(comm_hd)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "595006b7",
    "metadata": {},
    "outputs": [],
    "source": []
