--- a/pennylane/transiplation_super_conductor.ipynb
+++ b/pennylane/transiplation_super_conductor.ipynb
@@ -3704,7 +3704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "20f72546",
    "metadata": {},
    "outputs": [
@@ -5082,8 +5082,35 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 13,
+   "id": "f8a14175",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Counter({'CNOT': 48, 'Hadamard': 36, 'RX': 32, 'PauliRot': 30, 'RZ': 8, 'SWAP': 4})\n"
+     ]
+    }
+   ],
+   "source": [
+    "with qml.queuing.AnnotatedQueue() as q:\n",
+    "    transpiled_ansatz(res_beta[:2])  # 用2层测试\n",
+    "\n",
+    "tape = qml.tape.QuantumTape.from_queue(q)\n",
+    "\n",
+    "# 手动统计门数\n",
+    "from collections import Counter\n",
+    "gate_counter = Counter(op.name for op in tape.operations)\n",
+    "\n",
+    "print(gate_counter)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "1ded0ff2",
+   "id": "e12d724c",
    "metadata": {},
    "outputs": [],
    "source": []
