--- a/qiskit/milestone1.6.ipynb
+++ b/qiskit/milestone1.6.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -45,7 +52,6 @@
      "output_type": "stream",
      "text": [
       "ibm_brisbane\n",
-      "ibm_kyiv\n",
       "ibm_sherbrooke\n"
      ]
     }
@@ -58,14 +64,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<qiskit_ibm_runtime.models.backend_status.BackendStatus object at 0x7fd061adfe00>\n"
+      "<qiskit_ibm_runtime.models.backend_status.BackendStatus object at 0x7fc1b3f2b620>\n"
      ]
     }
    ],
@@ -82,7 +88,7 @@
     {
      "data": {
       "text/plain": [
-       "<qiskit.circuit.instructionset.InstructionSet at 0x7fd060181d80>"
+       "<qiskit.circuit.instructionset.InstructionSet at 0x7fc1b3f1bd90>"
       ]
      },
      "execution_count": 7,
@@ -137,12 +143,29 @@
     "qc.h(0)\n",
     "qc.cx(0, 1)\n",
     "qc.measure_all()\n",
-    "qc_transpiled = transpile(qc, backend)"
+    "qc_transpiled = transpile(qc, backend)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ 最终类型: <class 'qiskit.circuit.quantumcircuit.QuantumCircuit'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"✅ 最终类型:\", type(qc))  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,14 +178,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'00': 490, '11': 515, '10': 9, '01': 10}\n"
+      "{'10': 14, '00': 502, '11': 501, '01': 7}\n"
      ]
     }
    ],
@@ -173,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
